--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,5 +95,17 @@
         <script src="/assets/js/countdown.js"></script>
         <script src="/assets/js/wow.min.js"></script>
 		<script src="/assets/js/main.js"></script>
+		    <script>
+		            window.embeddedChatbotConfig = {
+		            chatbotId: "4RDdpIp1A476rKHTnHfV5",
+		            domain: "www.chatbase.co"
+		            }
+		            </script>
+		            <script
+		            src="https://www.chatbase.co/embed.min.js"
+		            chatbotId="4RDdpIp1A476rKHTnHfV5"
+		            domain="www.chatbase.co"
+		            defer>
+		    </script>
     </body>
 </html>
