--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,13 +97,13 @@
 		<script src="/assets/js/main.js"></script>
 		    <script>
 		            window.embeddedChatbotConfig = {
-		            chatbotId: "4RDdpIp1A476rKHTnHfV5",
+		            chatbotId: "N5a3GLY0gPT3cUcNt9Nf0",
 		            domain: "www.chatbase.co"
 		            }
 		            </script>
 		            <script
 		            src="https://www.chatbase.co/embed.min.js"
-		            chatbotId="4RDdpIp1A476rKHTnHfV5"
+		            chatbotId="N5a3GLY0gPT3cUcNt9Nf0"
 		            domain="www.chatbase.co"
 		            defer>
 		    </script>
